--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nirvana</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    wdwinid ndweinn if
+    <header>
+        <div>
+            <div>
+                Logo
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#introducao">Introdução</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#compositores">Compositores</a></li>
+                    <li><a href="#curiosidades">Curiosidades</a></li>
+                    <li><a href="#albuns">Álbuns</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section id="introducao">
+        <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab amet adipisci, recusandae quidem quasi ipsam delectus dolorum voluptatem iusto debitis officia nulla numquam nihil odio. Dolorem porro animi voluptas totam.</h1>
+    </section>
+    <main>
+        <section>
+
+        </section>
+
+        <section>
+            
+        </section>
+
+        <section>
+            
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
