Adicionado as Curiosidades e Compositores

--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -36,21 +36,39 @@
 
         <section id="compositores">
             <h1>Compositores</h1>
+            <br>
+            <ul>
+                <li><strong>Kurt Cobain:</strong> Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana.</li>
+                <br>
+                <li><strong>Krist Novoselic:</strong> Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</li>
+                <br>
+                <li><strong>Dave Grohl:</strong> Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</li>
+            </ul>
         </section>
 
         <section id="curiosidades">
             <h1>Curiosidades</h1>
+            <br>
             <ul>
                 <li>O Nome Antes de Nirvana: Antes de se decidirem por "Nirvana", a banda passou por vários nomes, incluindo Skid Row (já existia outra banda com esse nome), Pen Cap Chew, Bliss e Ted Ed Fred. Kurt Cobain escolheu "Nirvana" porque queria um nome que soasse bonito e agradável, em contraste com a sonoridade muitas vezes agressiva da banda, representando a busca pela libertação da dor e do sofrimento (o conceito budista).</li>
+                <br>
                 <li>A Origem de "Smells Like Teen Spirit": O título da música mais famosa da banda veio de uma pichação feita por Kathleen Hanna (da banda Bikini Kill) na parede do apartamento de Kurt. Ela escreveu "Kurt Smells Like Teen Spirit" ("Kurt Cheira a Teen Spirit"). Teen Spirit era, na verdade, uma marca de desodorante popular entre as adolescentes na época. Kurt só descobriu isso meses depois do lançamento da música, ele achou que era uma frase com um significado revolucionário ou anarquista.</li>
+                <br>
                 <li>Kurt Cobain Trabalhou como Faxineiro: Antes da fama, Kurt trabalhou como faxineiro em sua antiga escola de ensino médio (Aberdeen High School). Ironicamente, o clipe de "Smells Like Teen Spirit" apresenta um zelador dançando ao som da música em um ginásio escolar.</li>
+                <br>
                 <li>"Nevermind" Quase se Chamou "Sheep": Um dos títulos considerados para o álbum que os lançou ao estrelato foi "Sheep" (Ovelha). A ideia era uma piada interna sobre as pessoas que comprariam o álbum sem pensar. A capa também teria uma imagem diferente.</li>
+                <br>
                 <li>O Bebê da Capa de Nevermind: O famoso bebê nadando atrás da nota de dólar é Spencer Elden. Seus pais eram amigos do fotógrafo Kirk Weddle. Ele recebeu apenas $200 pelo ensaio na época e, anos mais tarde, processou a banda (sem sucesso) pela imagem.</li>
+                <br>
                 <li>Aprovação de "Weird Al" Yankovic: Kurt Cobain era fã de "Weird Al" Yankovic. Quando Weird Al pediu permissão para parodiar "Smells Like Teen Spirit" (criando "Smells Like Nirvana"), Kurt achou que era um sinal de que a banda tinha "chegado lá" e deu permissão imediatamente.</li>
+                <br>
                 <li>O Título Original de "In Utero": O terceiro álbum de estúdio da banda quase teve o título chocante "I Hate Myself and I Want to Die" ("Eu Me Odeio e Quero Morrer"). A gravadora e até Krist Novoselic convenceram Kurt a mudar, preocupados com a repercussão e possíveis processos. A frase acabou virando o título de uma faixa no lado B.</li>
+                <br>
                 <li>Primeiro Single Foi um Cover: O primeiro single oficial lançado pelo Nirvana pela gravadora Sub Pop não foi uma música original, mas sim um cover de "Love Buzz", da banda holandesa Shocking Blue.</li>
+                <br>
                 <li>Muitos Bateristas: Antes de Dave Grohl se juntar à banda em 1990 e solidificar a formação clássica, o Nirvana teve vários bateristas, sendo Chad Channing o mais notável (ele tocou na maior parte do álbum "Bleach").</li>
-                <li>O MTV Unplugged Inusitado: Para a gravação do famoso acústico, a banda se recusou a tocar apenas seus maiores sucessos. Eles incluíram vários covers de artistas menos conhecidos (como The Vaselines e Meat Puppets, que até participaram) e pediram que o palco fosse decorado com lírios e velas pretas, dando um ar fúnebre que Kurt Cobain desejava.</li>
+                <br>
+                <li>O MTV Unplugged Inusitado: Para a gravação do famoso acústico, a banda se recusou a tocar apenas seus maiores sucessos. Eles incluíram vários covers de artistas menos conhecidos (como The Vaselines e Meat Puppets, que até participaram) e pediram que o palco fosse decorado com lírios e velas pretas, dando um ar fúnebre que Kurt Cobain desejava.</li> <br>
             </ul>
         </section>
         
