Imagens dos álbuns e com as playlists certas

--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -74,10 +74,18 @@
         
         <section id="albuns">
             <h1>Álbuns</h1>
+            <a href="https://www.youtube.com/watch?v=7E-KAP359ys&list=PLI2rmSmXn-KHDF6G6T9eHvEuYWJgjyCCB" target="_blank"><img src="img/AlbumBleach.jpeg" alt="Imagem do álbum Bleach do Nirvana"></a>
+            <br><br><br><br>
+            <a href="https://www.youtube.com/watch?v=V0hDhjO3AwM&list=PL2Kt87NbIXSWhmsp8YEXDLU5nFi_qnBPq" target="_blank"><img src="img/AlbumNevermind.jpg" alt="Imagem do álbum Nevermind"></a>
+            <br><br><br><br>
+            <a href="https://www.youtube.com/watch?v=paxCkni3ahU&list=PLBnJv6rImVe9qUn2L-T0HvR9hZ3VXynab&index=1" target="_blank"><img src="img/AlbumIncesticide.jpg" alt="Imagem do álbum Incesticide"></a>
+            <br><br><br><br>
+            <a href="https://www.youtube.com/watch?v=d4y38PmkeS0" target="_blank"><img src="img/AlbumInUtero.jpeg" alt=""></a>
+            <br><br>
         </section>
     </main>
     <footer>
-        <p>2025 - Criado po Rafael Lima - Todos os Direitos reservados</p>
+        <p>2025 - Criado por Rafael Lima - Todos os Direitos reservados</p>
     </footer>
 </body>
 </html>
