--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -26,12 +26,34 @@
     </header>
     <section id="introducao">
         <h1>Introdução</h1>
+        <br>
         <p>Nirvana: A Banda Que Definiu uma Era. Poucas bandas na história tiveram um impacto tão sísmico e imediato. Emergindo da cena underground de Seattle no início dos anos 90, o Nirvana deu voz a uma geração com sua música crua e carregada de emoção. O sucesso estrondoso de álbuns como 'Nevermind' não foi apenas musical, mas um marco cultural que abalou a indústria, popularizou o rock alternativo em escala global e consagrou a banda como um ícone influente. Este espaço é dedicado a explorar a trajetória e o legado duradouro desta força transformadora da música.</p>
     </section>
     <main>
         <section id="sobre">
             <h1>Sobre</h1>
-            <p></p>
+            <br>
+            <h2>Formação e Primeiros Anos em Aberdeen/Seattle</h2>
+            <p>O Nirvana foi formado em Aberdeen, Washington, em 1987, pelo vocalista e guitarrista Kurt Cobain e pelo baixista Krist Novoselic. Após passarem por uma série de bateristas nos primeiros anos, a formação se consolidaria mais tarde. Influenciados pelo punk rock, heavy metal e rock alternativo da época (como Pixies, Melvins, Sonic Youth), eles começaram a desenvolver um som cru e energético, tocando em festas locais e pequenos clubes na cena musical underground de Seattle e arredores. Essa fase inicial foi marcada pela busca por uma identidade sonora e pela instabilidade na posição de baterista, culminando na gravação de suas primeiras demos e na assinatura com o selo independente Sub Pop.</p>
+            <br><br>
+            <h2>O Álbum de Estreia e a Chegada de Dave Grohl</h2>
+            <p>Em 1989, lançaram seu álbum de estreia, "Bleach", pela Sub Pop. Gravado com um orçamento mínimo, o disco apresentava um som mais pesado e denso, com influências do sludge metal dos Melvins e do punk rock. Músicas como "About a Girl" (que já mostrava a veia melódica de Cobain) e "Blew" ganharam algum reconhecimento na cena independente e em rádios universitárias. Foi durante a turnê de "Bleach" e a busca por um som mais coeso que a banda finalmente encontrou seu baterista definitivo: Dave Grohl, vindo da banda de hardcore punk Scream. A entrada de Grohl em 1990 trouxe uma potência rítmica e uma energia que complementaram perfeitamente a dinâmica da banda, solidificando a formação clássica do Nirvana.</p>
+            <br><br>
+            <h2>O Fenômeno Nevermind e a Explosão do Grunge</h2>
+            <p>Sentindo que haviam superado o alcance da Sub Pop e buscando uma produção mais polida, o Nirvana assinou com a major label DGC Records (subsidiária da Geffen Records). Em setembro de 1991, lançaram "Nevermind". Produzido por Butch Vig, o álbum equilibrou perfeitamente o peso e a agressividade do punk/metal com melodias pop incrivelmente cativantes. O primeiro single, "Smells Like Teen Spirit", tornou-se um hino improvável e onipresente. Seu videoclipe, exibido massivamente na MTV, capturou a apatia e a energia da juventude da época. O sucesso foi meteórico e avassalador: "Nevermind" derrubou Michael Jackson do topo das paradas da Billboard em janeiro de 1992, vendendo milhões de cópias e transformando o Nirvana na maior banda do mundo. Esse sucesso catapultou o "grunge" e toda a cena de rock alternativo de Seattle (incluindo Pearl Jam, Soundgarden, Alice in Chains) para o mainstream global, mudando a paisagem da música popular da noite para o dia.</p>
+            <br><br>
+            <h2>O Som Característico e a Angústia de uma Geração</h2>
+            <p>Musicalmente, o Nirvana ficou conhecido por sua dinâmica "quiet-loud" (calmo-alto), alternando versos melódicos e contidos com refrões explosivos e distorcidos. As letras de Kurt Cobain eram frequentemente introspectivas, abstratas, irônicas e carregadas de angústia, alienação e crítica social velada. Cobain, com seu carisma relutante e sua voz que variava do sussurro melancólico ao grito visceral, tornou-se o porta-voz involuntário de uma geração que se sentia deslocada e desiludida com os valores estabelecidos. A simplicidade e a crueza de suas composições, aliadas a ganchos melódicos poderosos, criaram um som que era ao mesmo tempo acessível e desafiador.</p>
+            <br><br>
+            <h2>A Pressão da Fama e In Utero</h2>
+            <p>O sucesso massivo trouxe consigo uma pressão gigantesca, especialmente para Kurt Cobain, que lutava contra o vício em heroína, depressão, problemas de saúde crônicos e o desconforto com o status de celebridade e "voz de uma geração". Como resposta a essa superexposição e à sonoridade mais polida de "Nevermind", a banda buscou um som mais cru, abrasivo e desafiador para seu terceiro álbum de estúdio, "In Utero", lançado em 1993. Produzido em grande parte por Steve Albini, conhecido por seu trabalho com bandas underground, o disco era intencionalmente menos comercial, com canções como "Heart-Shaped Box" e "Rape Me" explorando temas mais sombrios e desconfortáveis. Apesar de sua natureza menos palatável, "In Utero" foi aclamado pela crítica e também alcançou grande sucesso comercial, provando a força artística e a base de fãs leal da banda.</p>
+            <br><br>
+            <h2>O Acústico MTV e o Fim Trágico</h2>
+            <p>No final de 1993, o Nirvana gravou uma performance memorável para a série "MTV Unplugged". Diferente de muitos artistas que simplesmente tocavam seus hits em formato acústico, a banda optou por um setlist inesperado, incluindo covers de artistas que admiravam (David Bowie, The Vaselines, Lead Belly, Meat Puppets) e versões despojadas e emocionantes de suas próprias músicas menos óbvias. A performance, lançada postumamente como o álbum "MTV Unplugged in New York" (1994), é frequentemente citada como um dos pontos altos da carreira da banda, revelando a vulnerabilidade e a profundidade das composições de Cobain. Infelizmente, a trajetória da banda foi tragicamente interrompida em 5 de abril de 1994, quando Kurt Cobain foi encontrado morto em sua casa em Seattle, vítima de suicídio. Sua morte chocou o mundo e marcou o fim do Nirvana.</p>
+            <br><br>
+            <h2>Legado e Influência Duradoura</h2>
+            <p>Apesar de sua carreira relativamente curta (pouco mais de seis anos entre o primeiro álbum e a morte de Cobain), o Nirvana deixou um legado indelével na música e na cultura popular. Eles foram fundamentais para levar o rock alternativo ao mainstream, abrindo portas para inúmeras outras bandas e redefinindo o som do rock nos anos 90. Sua música continua a ressoar com novas gerações, abordando temas universais de angústia, identidade e rebeldia. Kurt Cobain permanece um ícone cultural, e a música do Nirvana é constantemente celebrada por sua honestidade brutal, sua energia crua e suas melodias inesquecíveis, garantindo seu lugar como uma das bandas mais importantes e influentes da história do rock.</p>
+            <br>
         </section>
 
         <section id="compositores">
@@ -43,6 +65,7 @@
                 <li><strong>Krist Novoselic:</strong> Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</li>
                 <br>
                 <li><strong>Dave Grohl:</strong> Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</li>
+                <br>
             </ul>
         </section>
 
@@ -68,19 +91,21 @@
                 <br>
                 <li>Muitos Bateristas: Antes de Dave Grohl se juntar à banda em 1990 e solidificar a formação clássica, o Nirvana teve vários bateristas, sendo Chad Channing o mais notável (ele tocou na maior parte do álbum "Bleach").</li>
                 <br>
-                <li>O MTV Unplugged Inusitado: Para a gravação do famoso acústico, a banda se recusou a tocar apenas seus maiores sucessos. Eles incluíram vários covers de artistas menos conhecidos (como The Vaselines e Meat Puppets, que até participaram) e pediram que o palco fosse decorado com lírios e velas pretas, dando um ar fúnebre que Kurt Cobain desejava.</li> <br>
+                <li>O MTV Unplugged Inusitado: Para a gravação do famoso acústico, a banda se recusou a tocar apenas seus maiores sucessos. Eles incluíram vários covers de artistas menos conhecidos (como The Vaselines e Meat Puppets, que até participaram) e pediram que o palco fosse decorado com lírios e velas pretas, dando um ar fúnebre que Kurt Cobain desejava.</li>
+                <br>
             </ul>
         </section>
         
         <section id="albuns">
             <h1>Álbuns</h1>
+            <br>
             <a href="https://www.youtube.com/watch?v=7E-KAP359ys&list=PLI2rmSmXn-KHDF6G6T9eHvEuYWJgjyCCB" target="_blank"><img src="img/AlbumBleach.jpeg" alt="Imagem do álbum Bleach do Nirvana"></a>
             <br><br><br><br>
             <a href="https://www.youtube.com/watch?v=V0hDhjO3AwM&list=PL2Kt87NbIXSWhmsp8YEXDLU5nFi_qnBPq" target="_blank"><img src="img/AlbumNevermind.jpg" alt="Imagem do álbum Nevermind"></a>
             <br><br><br><br>
             <a href="https://www.youtube.com/watch?v=paxCkni3ahU&list=PLBnJv6rImVe9qUn2L-T0HvR9hZ3VXynab&index=1" target="_blank"><img src="img/AlbumIncesticide.jpg" alt="Imagem do álbum Incesticide"></a>
             <br><br><br><br>
-            <a href="https://www.youtube.com/watch?v=d4y38PmkeS0" target="_blank"><img src="img/AlbumInUtero.jpeg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=d4y38PmkeS0" target="_blank"><img src="img/AlbumInUtero.jpeg" alt="Imagem do álbum In Utero"></a>
             <br><br>
         </section>
     </main>
