--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -97,16 +97,16 @@
             </ul>
         </section>
         
-        <section id="albuns">
+        <section id="albuns" class="container flex">
             <h1>Álbuns</h1>
             <br>
-            <a href="https://www.youtube.com/watch?v=7E-KAP359ys&list=PLI2rmSmXn-KHDF6G6T9eHvEuYWJgjyCCB" target="_blank"><img src="img/AlbumBleach.jpeg" alt="Imagem do álbum Bleach do Nirvana"></a>
+            <div class="item"><a href="https://www.youtube.com/watch?v=7E-KAP359ys&list=PLI2rmSmXn-KHDF6G6T9eHvEuYWJgjyCCB" target="_blank"><img src="img/AlbumBleach.jpeg" alt="Imagem do álbum Bleach do Nirvana"></a></div>
             <br><br><br><br>
-            <a href="https://www.youtube.com/watch?v=V0hDhjO3AwM&list=PL2Kt87NbIXSWhmsp8YEXDLU5nFi_qnBPq" target="_blank"><img src="img/AlbumNevermind.jpg" alt="Imagem do álbum Nevermind"></a>
+            <div class="item"><a href="https://www.youtube.com/watch?v=V0hDhjO3AwM&list=PL2Kt87NbIXSWhmsp8YEXDLU5nFi_qnBPq" target="_blank"><img src="img/AlbumNevermind.jpg" alt="Imagem do álbum Nevermind"></a></div>
             <br><br><br><br>
-            <a href="https://www.youtube.com/watch?v=paxCkni3ahU&list=PLBnJv6rImVe9qUn2L-T0HvR9hZ3VXynab&index=1" target="_blank"><img src="img/AlbumIncesticide.jpg" alt="Imagem do álbum Incesticide"></a>
+            <div class="item"><a href="https://www.youtube.com/watch?v=paxCkni3ahU&list=PLBnJv6rImVe9qUn2L-T0HvR9hZ3VXynab&index=1" target="_blank"><img src="img/AlbumIncesticide.jpg" alt="Imagem do álbum Incesticide"></a></div>
             <br><br><br><br>
-            <a href="https://www.youtube.com/watch?v=d4y38PmkeS0" target="_blank"><img src="img/AlbumInUtero.jpeg" alt="Imagem do álbum In Utero"></a>
+            <div class="item"><a href="https://www.youtube.com/watch?v=d4y38PmkeS0" target="_blank"><img src="img/AlbumInUtero.jpeg" alt="Imagem do álbum In Utero"></a></div>
             <br><br><br>
         </section>
     </main>
