Mudanças (banner, ajustes, etc.)

--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -24,10 +24,8 @@
             </nav>
         </div>
     </header>
-    <section id="introducao">
-        <h1>Introdução</h1>
-        <br>
-        <p>Nirvana: A Banda Que Definiu uma Era. Poucas bandas na história tiveram um impacto tão sísmico e imediato. Emergindo da cena underground de Seattle no início dos anos 90, o Nirvana deu voz a uma geração com sua música crua e carregada de emoção. O sucesso estrondoso de álbuns como 'Nevermind' não foi apenas musical, mas um marco cultural que abalou a indústria, popularizou o rock alternativo em escala global e consagrou a banda como um ícone influente. Este espaço é dedicado a explorar a trajetória e o legado duradouro desta força transformadora da música.</p>
+    <section id="introducao" class="banner">
+        <p><strong>Nirvana: A Banda Que Definiu uma Era. Poucas bandas na história tiveram um impacto tão sísmico e imediato. Emergindo da cena underground de Seattle no início dos anos 90, o Nirvana deu voz a uma geração com sua música crua e carregada de emoção.</strong></p>
         <br>
     </section>
     <main>
