Adição de imagens dos artistas, adição de divs, etc.

--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -63,17 +63,36 @@
 
         <section id="compositores">
             <h1>Compositores</h1>
-            <br>
-            <ul>
-                <li><strong>Kurt Cobain:</strong> Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana.</li>
+            <div class="container">
                 <br>
-                <li><strong>Krist Novoselic:</strong> Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</li>
-                <br>
-                <li><strong>Dave Grohl:</strong> Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</li>
-                <br>
-            </ul>
-        </section>
+                <div class="item">
+                    <div class="imagemcard"><img src="imgcompositores/KurtCobain.jpg" alt="Fotografia de Kurt Cobain"></div>
+                    <p><strong>Kurt Cobain:</strong> Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana</p>.
+                </div>
 
+                <div class="item">
+                    <div class="imagemcard"><img src="imgcompositores/Krist.jpg" alt="Fotografia de Krist Novoselic"></div>
+                    <p><strong>Krist Novoselic:</strong> Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</p>
+                </div>
+
+                <div class="item">
+                    <div class="imagemcard"><img src="imgcompositores/" alt=""></div>
+                </div>
+
+                <div class="item">
+                    <div class="imagemcard"><img src="imgcompositores/nirvana-1991.jpg" alt="Fotografia dos compositores da banda Nirvana"></div>
+                </div>
+                <ul>
+                    <li><strong>Kurt Cobain:</strong> Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana.</li>
+                    <br>
+                    <li><strong>Krist Novoselic:</strong> Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</li>
+                    <br>
+                    <li><strong>Dave Grohl:</strong> Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</li>
+                    <br>
+                </ul>
+                
+        </section>
+            </div>
         <section id="curiosidades">
             <h1>Curiosidades</h1>
             <br>
