--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -76,21 +76,13 @@
                 </div>
 
                 <div class="item">
-                    <div class="imagemcard"><img src="imgcompositores/" alt=""></div>
+                    <div class="imagemcard"><img src="imgcompositores/Dave.jpg" alt=""></div>
+                    <p><strong>Dave Grohl:</strong> Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</p>
                 </div>
 
                 <div class="item">
                     <div class="imagemcard"><img src="imgcompositores/nirvana-1991.jpg" alt="Fotografia dos compositores da banda Nirvana"></div>
                 </div>
-                <ul>
-                    <li><strong>Kurt Cobain:</strong> Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana.</li>
-                    <br>
-                    <li><strong>Krist Novoselic:</strong> Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</li>
-                    <br>
-                    <li><strong>Dave Grohl:</strong> Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</li>
-                    <br>
-                </ul>
-                
         </section>
             </div>
         <section id="curiosidades">
