--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -66,25 +66,29 @@
             <div class="container">
                 <br>
                 <div class="item">
-                    <div class="imagemcard"><img src="imgcompositores/KurtCobain.jpg" alt="Fotografia de Kurt Cobain"></div>
-                    <p><strong>Kurt Cobain:</strong> Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana</p>.
+                    <div class="imagem"><img class="card" src="imgcompositores/KurtCobain.jpg" alt="Fotografia de Kurt Cobain"></div>
+                    <h3>Kurt Cobain</h3>
+                    <p>Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana</p>.
                 </div>
 
                 <div class="item">
-                    <div class="imagemcard"><img src="imgcompositores/Krist.jpg" alt="Fotografia de Krist Novoselic"></div>
-                    <p><strong>Krist Novoselic:</strong> Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</p>
+                    <div class="imagem"><img class="card" src="imgcompositores/Krist.jpg" alt="Fotografia de Krist Novoselic"></div>
+                    <h3>Krist Novoselic</h3>
+                    <p>Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</p>
                 </div>
 
                 <div class="item">
-                    <div class="imagemcard"><img src="imgcompositores/Dave.jpg" alt=""></div>
-                    <p><strong>Dave Grohl:</strong> Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</p>
+                    <div class="imagem"><img class="card" src="imgcompositores/Dave.jpg" alt=""></div>
+                    <h3>Dave Grohl</h3>
+                    <p>Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</p>
                 </div>
 
                 <div class="item">
-                    <div class="imagemcard"><img src="imgcompositores/nirvana-1991.jpg" alt="Fotografia dos compositores da banda Nirvana"></div>
+                    <div class="imagem"><img class="card" src="imgcompositores/nirvana-1991.jpg" alt="Fotografia dos compositores da banda Nirvana"></div>
+                    <h3>Banda</h3>
                 </div>
-        </section>
             </div>
+        </section>
         <section id="curiosidades">
             <h1>Curiosidades</h1>
             <br>
