Mudanças na responsividade

--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -68,7 +68,7 @@
                 <div class="item">
                     <div class="imagem"><img class="card" src="imgcompositores/KurtCobain.jpg" alt="Fotografia de Kurt Cobain"></div>
                     <h3>Kurt Cobain</h3>
-                    <p>Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana</p>.
+                    <p>Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana.</p>
                 </div>
 
                 <div class="item">
