--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -63,18 +63,20 @@
 
         <section id="compositores">
             <h1>Compositores</h1>
-            <div class="container">
+            <div class="container">    
                 <br>
                 <div class="item">
                     <div class="imagem"><img class="card" src="imgcompositores/KurtCobain.jpg" alt="Fotografia de Kurt Cobain"></div>
                     <h3>Kurt Cobain</h3>
                     <p>Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana.</p>
+                    <a href="#modal1" class="bnt">Saiba mais</a>
                 </div>
 
                 <div class="item">
                     <div class="imagem"><img class="card" src="imgcompositores/Krist.jpg" alt="Fotografia de Krist Novoselic"></div>
                     <h3>Krist Novoselic</h3>
                     <p>Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</p>
+                    <a href="#modal2">Saiba mais</a>
                 </div>
 
                 <div class="item">
@@ -131,5 +133,14 @@
     <footer>
         <p>2025 - Criado por Rafael Lima - Todos os Direitos reservados</p>
     </footer>
+    <div class="card">
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+                <h3>Mais detalhes sobre sua vida</h3>
+                <p>Kurt Cobain foi a força criativa central e a alma do Nirvana, transcendendo os papéis de vocalista e guitarrista principal. Ele foi o arquiteto sonoro da banda, responsável pela composição da vasta maioria das letras - muitas vezes viscerais, poéticas e angustiadas - e também das melodias e estruturas musicais que definiram o som grunge e capturaram o espírito de uma geração inteira nos anos 90. Sua visão artística singular e sua honestidade brutal o consagraram como um dos compositores mais influentes e icônicos do rock, cujo legado perdura mesmo após sua trágica e prematura partida.</p>
+                <a href="#" onclick="history.back();" class="close-bnt">Fechar</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
