Algumas mudanças nos botões (CSS e um pouco no HTML)

--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -62,27 +62,28 @@
         </section>
 
         <section id="compositores">
+            <div class="container"> 
             <h1>Compositores</h1>
-            <div class="container">    
                 <br>
                 <div class="item">
                     <div class="imagem"><img class="card" src="imgcompositores/KurtCobain.jpg" alt="Fotografia de Kurt Cobain"></div>
                     <h3>Kurt Cobain</h3>
                     <p>Vocalista principal, guitarrista e compositor principal. Ele era responsável pela vasta maioria das letras e das melodias/estruturas musicais das canções do Nirvana.</p>
-                    <a href="#modal1" class="bnt">Saiba mais</a>
+                    <a href="#modal1" class="btn">Saiba mais</a>
                 </div>
 
                 <div class="item">
                     <div class="imagem"><img class="card" src="imgcompositores/Krist.jpg" alt="Fotografia de Krist Novoselic"></div>
                     <h3>Krist Novoselic</h3>
                     <p>Baixista. Embora não fosse o principal compositor de letras ou melodias, suas linhas de baixo eram cruciais para a sonoridade da banda e ele colaborava nos arranjos das músicas, ajudando a moldar a estrutura final das canções trazidas por Kurt.</p>
-                    <a href="#modal2">Saiba mais</a>
+                    <a href="#modal2" class="btn2">Saiba mais</a>
                 </div>
 
                 <div class="item">
                     <div class="imagem"><img class="card" src="imgcompositores/Dave.jpg" alt=""></div>
                     <h3>Dave Grohl</h3>
                     <p>Baterista (na formação mais famosa) e backing vocal. Assim como Krist, Dave contribuía significativamente para os arranjos com suas partes de bateria poderosas e dinâmicas, que ajudavam a definir a energia das músicas. Ele também adicionava harmonias vocais.</p>
+                    <a href="#modal3" class="btn3">Saiba mais</a>
                 </div>
 
                 <div class="item">
@@ -138,7 +139,22 @@
             <div class="modal-content">
                 <h3>Mais detalhes sobre sua vida</h3>
                 <p>Kurt Cobain foi a força criativa central e a alma do Nirvana, transcendendo os papéis de vocalista e guitarrista principal. Ele foi o arquiteto sonoro da banda, responsável pela composição da vasta maioria das letras - muitas vezes viscerais, poéticas e angustiadas - e também das melodias e estruturas musicais que definiram o som grunge e capturaram o espírito de uma geração inteira nos anos 90. Sua visão artística singular e sua honestidade brutal o consagraram como um dos compositores mais influentes e icônicos do rock, cujo legado perdura mesmo após sua trágica e prematura partida.</p>
-                <a href="#" onclick="history.back();" class="close-bnt">Fechar</a>
+                <a href="#" onclick="history.back();" class="close-btn">Fechar</a>
+            </div>
+        </div>
+        <div id="modal2" class="modal">
+            <div class="modal-content">
+                <h3>Mais detalhes sobre sua vida</h3>
+                    <p>Krist Novoselic, no Nirvana, ia muito além de ser apenas o baixista. Suas linhas de baixo eram fundamentais, servindo como uma espinha dorsal rítmica e frequentemente adicionando elementos melódicos que interagiam diretamente com as guitarras de Kurt Cobain. Essa interação criava a fundação pesada e distinta da banda. Como cofundador e amigo próximo de Kurt, sua colaboração nos arranjos era intrínseca, moldando a estrutura final das músicas. Além disso, Krist possuía uma presença de palco notável e frequentemente era a voz mais articulada e reflexiva do Nirvana em entrevistas. Após o fim do Nirvana, Krist continuou sua jornada musical com projetos como Sweet 75 e Eyes Adrift. No entanto, uma parte significativa de sua vida pós-Nirvana foi dedicada ao ativismo político. Ele fundou o JAMPAC para lutar por direitos dos artistas e se envolveu profundamente em causas como a reforma eleitoral, chegando a publicar um livro sobre o tema. Krist permanece uma figura importante na preservação do legado do Nirvana e um cidadão ativamente engajado.</p>
+                <p></p>
+                <a href="#" onclick="history.back();" class="close-btn">Fechar</a>
+            </div>
+        </div>
+        <div id="modal3" class="modal">
+            <div class="modal-content">
+                <h3>Mais detalhes sobre sua vida</h3>
+                <p>Dave Grohl, no Nirvana, já demonstrava um talento que ia além da bateria. Suas partes eram incrivelmente musicais e dinâmicas, ajudando a moldar a sonoridade da banda. Ele também já compunha, como evidenciado pela música "Marigold", mostrando um potencial que floresceria mais tarde. Após o Nirvana, Grohl se reinventou espetacularmente com o Foo Fighters. No primeiro álbum, ele gravou quase todos os instrumentos, revelando-se um talentoso frontman, guitarrista, vocalista e o principal compositor da banda, responsável por inúmeros sucessos do rock. Sua versatilidade se estende a aclamados projetos paralelos como Queens of the Stone Age (bateria), Them Crooked Vultures (bateria) e Probot (metal). Além disso, dirigiu documentários musicais e escreveu um livro de memórias, consolidando-se como uma figura central, carismática e multifacetada do rock moderno.</p>
+                <a href="#" onclick="history.back();" class="close-btn">Fechar</a>
             </div>
         </div>
     </div>
