Leves mudanças no CSS

--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -55,7 +55,6 @@
                     <h2>Legado e Influência Duradoura</h2>
                     <p>Apesar de sua carreira relativamente curta (pouco mais de seis anos entre o primeiro álbum e a morte de Cobain), o Nirvana deixou um legado indelével na música e na cultura popular. Eles foram fundamentais para levar o rock alternativo ao mainstream, abrindo portas para inúmeras outras bandas e redefinindo o som do rock nos anos 90. Sua música continua a ressoar com novas gerações, abordando temas universais de angústia, identidade e rebeldia. Kurt Cobain permanece um ícone cultural, e a música do Nirvana é constantemente celebrada por sua honestidade brutal, sua energia crua e suas melodias inesquecíveis, garantindo seu lugar como uma das bandas mais importantes e influentes da história do rock.</p>
                     <p>Fonte: <a href="https://www.allmusic.com/artist/nirvana-mn0000357406" target="_blank">AllMusic</a> <a href="https://pt.wikipedia.org/wiki/Nirvana_(banda)" target="_blank">Wikipédia</a> <a href="https://en.wikipedia.org/wiki/Nirvana_(band)" target="_blank">Wikipedia(inglês)</a></p>
-                    <p></p>
                 </div>
             </div>
             <br>
@@ -134,7 +133,7 @@
     <footer>
         <p>2025 - Criado por Rafael Lima - Todos os Direitos reservados</p>
     </footer>
-    <div class="card">
+    <div class="card1">
         <div id="modal1" class="modal">
             <div class="modal-content">
                 <h3>Mais detalhes sobre sua vida</h3>
