--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -131,19 +131,19 @@
         </section>
     </main>
     <footer>
-        <p>2025 - Criado por Rafael Lima - Todos os Direitos reservados</p>
+        <p>&copy; 2025 - Criado por Rafael Lima - Todos os Direitos reservados</p>
     </footer>
     <div class="card1">
         <div id="modal1" class="modal">
             <div class="modal-content">
-                <h3>Mais detalhes sobre sua vida</h3>
+                <h3>Mais detalhes sobre o guitarrista</h3>
                 <p>Kurt Cobain foi a força criativa central e a alma do Nirvana, transcendendo os papéis de vocalista e guitarrista principal. Ele foi o arquiteto sonoro da banda, responsável pela composição da vasta maioria das letras - muitas vezes viscerais, poéticas e angustiadas - e também das melodias e estruturas musicais que definiram o som grunge e capturaram o espírito de uma geração inteira nos anos 90. Sua visão artística singular e sua honestidade brutal o consagraram como um dos compositores mais influentes e icônicos do rock, cujo legado perdura mesmo após sua trágica e prematura partida.</p>
                 <a href="#" onclick="history.back();" class="close-btn">Fechar</a>
             </div>
         </div>
         <div id="modal2" class="modal">
             <div class="modal-content">
-                <h3>Mais detalhes sobre sua vida</h3>
+                <h3>Mais detalhes sobre o baixista</h3>
                     <p>Krist Novoselic, no Nirvana, ia muito além de ser apenas o baixista. Suas linhas de baixo eram fundamentais, servindo como uma espinha dorsal rítmica e frequentemente adicionando elementos melódicos que interagiam diretamente com as guitarras de Kurt Cobain. Essa interação criava a fundação pesada e distinta da banda. Como cofundador e amigo próximo de Kurt, sua colaboração nos arranjos era intrínseca, moldando a estrutura final das músicas. Além disso, Krist possuía uma presença de palco notável e frequentemente era a voz mais articulada e reflexiva do Nirvana em entrevistas. Após o fim do Nirvana, Krist continuou sua jornada musical com projetos como Sweet 75 e Eyes Adrift. No entanto, uma parte significativa de sua vida pós-Nirvana foi dedicada ao ativismo político. Ele fundou o JAMPAC para lutar por direitos dos artistas e se envolveu profundamente em causas como a reforma eleitoral, chegando a publicar um livro sobre o tema. Krist permanece uma figura importante na preservação do legado do Nirvana e um cidadão ativamente engajado.</p>
                 <p></p>
                 <a href="#" onclick="history.back();" class="close-btn">Fechar</a>
@@ -151,7 +151,7 @@
         </div>
         <div id="modal3" class="modal">
             <div class="modal-content">
-                <h3>Mais detalhes sobre sua vida</h3>
+                <h3>Mais detalhes sobre baterista</h3>
                 <p>Dave Grohl, no Nirvana, já demonstrava um talento que ia além da bateria. Suas partes eram incrivelmente musicais e dinâmicas, ajudando a moldar a sonoridade da banda. Ele também já compunha, como evidenciado pela música "Marigold", mostrando um potencial que floresceria mais tarde. Após o Nirvana, Grohl se reinventou espetacularmente com o Foo Fighters. No primeiro álbum, ele gravou quase todos os instrumentos, revelando-se um talentoso frontman, guitarrista, vocalista e o principal compositor da banda, responsável por inúmeros sucessos do rock. Sua versatilidade se estende a aclamados projetos paralelos como Queens of the Stone Age (bateria), Them Crooked Vultures (bateria) e Probot (metal). Além disso, dirigiu documentários musicais e escreveu um livro de memórias, consolidando-se como uma figura central, carismática e multifacetada do rock moderno.</p>
                 <a href="#" onclick="history.back();" class="close-btn">Fechar</a>
             </div>
