--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -6,6 +6,9 @@
     <title>Nirvana</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/Nirvana.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Candal&family=Holtwood+One+SC&family=Notable&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
