Telefone e email alterados (apenas por segurança, ignore este comit)

--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -137,13 +137,13 @@
         <section id="contato">
             <h1>Contato</h1>
             <div class="gmail">
-                <p>Endereço de email: rafita.limagames2@gmail.com</p>
+                <p>Endereço de email: rafita.XXXXXXXXX@gmail.com</p>
             </div>
             <div class="local">
                 <p>Rua Bélgica 88, Colônia, SP, Brasil</p>
             </div>
             <div class="telefone">
-                <p>Telefone: +55 (11) 96334-7756</p>
+                <p>Telefone: +55 (11) XXXXX-XXXX</p>
             </div>
         </section>
     </main>
