--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                Logo
+                <a href="/SiteIA/index.html">Logo</a>
             </div>
             <nav>
                 <ul>
@@ -23,7 +23,7 @@
                     <li><a href="#compositores">Compositores</a></li>
                     <li><a href="#curiosidades">Curiosidades</a></li>
                     <li><a href="#albuns">Álbuns</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="/SiteIA/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -132,18 +132,6 @@
                 <img src="img/Nirvanagaleria1USAESSA.jpg" alt="Foto dos integrantes da banda Nirvana">
                 <img src="img/Nirvanagaleria2USAESSA.jpg" alt="Foto do álbum com as letras das músicas do Nirvana">
                 <img src="img/Nirvanagaleria3USAESSA.jpg" alt="Foto com o fundo preto escrito NIRVANA em branco">
-            </div>
-        </section>
-        <section id="contato">
-            <h1>Contato</h1>
-            <div class="gmail">
-                <p>Endereço de email: rafita.XXXXXXXXX@gmail.com</p>
-            </div>
-            <div class="local">
-                <p>Rua Bélgica 88, Colônia, SP, Brasil</p>
-            </div>
-            <div class="telefone">
-                <p>Telefone: +55 (11) XXXXX-XXXX</p>
             </div>
         </section>
     </main>
